syntax = "proto3";

package turnly.branch_management.v1.opening_hours;

message ListLocationHoursRequest {
  string location_id = 1;
}

message SaveOpeningHoursObject {
  string id = 1;
  int32 day_of_week = 2;
  bool closed_all_day = 3;
  bool open_all_day = 4;
  int32 open_hour = 5;
  int32 open_minutes = 6;
  int32 close_hour = 7;
  int32 close_minutes = 8;
}

message SaveOpeningHoursRequest {
  string location_id = 1;
  repeated SaveOpeningHoursObject opening_hours = 2;
}
